--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
-       <!--  assets  -->
-  
+       <!--  url css config.yml  -->
   {% for css in site.external_css %}
   <link rel="stylesheet" href="{{ css }}">
 {% endfor %}
-
-<!--    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">    -->
+    <!--  url css config.yml  -->
+<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">  
   <script>
     // Check for dark mode preference
     if (localStorage.getItem('darkMode') === 'true' || 
